--- a/src/styling/blog.css
+++ b/src/styling/blog.css
@@ -1,7 +1,5 @@
 body {
-  /* background-color: #0b1c2f;
-  color: white; */
-  background-color: white;
+  background-color: #eeeeee;
   color: #0b1c2f;
   /* font-family: Inter, sans-serif; */
   font-family: Geosanslight, sans-serif;
@@ -18,6 +16,7 @@ body {
   flex-direction: column;
   align-items: center;
   border-bottom: 1px solid black;
+  /* padding-top: 110px; */
 }
 
 .title-header {
