--- a/src/styling/blog.css
+++ b/src/styling/blog.css
@@ -47,9 +47,17 @@ body {
 }
 
 .header-photo {
-  height: 10%;
-  width: 10%;
-  border-radius: 50%;
+  /* height: 10%;
+  width: 10%; */
+  /* border-radius: 50%; */
+  /* height: 20%;
+  width: 20%; */
+  /* box-shadow: 0 0 10px 5px; */
+
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 20%;
 }
 
 .projects-header,
@@ -58,6 +66,11 @@ body {
   color: black;
   font-size: 1.5em;
   text-decoration: underline;
+}
+
+.socials-header {
+  /* padding-left: 100px; */
+  margin-left: 100px;
 }
 
 a {
@@ -81,7 +94,7 @@ a {
   justify-content: center;
   text-align: center;
   margin-top: 10px;
-  /* background-color: orange; */
+  box-shadow: 5px 5px 20px;
 }
 
 .bio-container__child {
@@ -92,18 +105,33 @@ a {
   display: flex;
   flex-direction: column;
   align-items: center;
+  /* width: 90%;
+  box-shadow: 5px 5px 20px;
+  margin-left: 100px; */
+}
+
+.projects-links {
+  padding-left: 750px;
 }
 
 .socials-section {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  /* justify-content: space-around; */
+  justify-content: space-evenly;
+  color: black;
+  box-shadow: 5px 5px 20px;
+  width: 90%;
+  margin-left: 100px;
 }
 
 .socials-links__container {
   display: flex;
   align-content: center;
-  border: 1px black ridge;
+}
+
+.link-one {
+  /* background-image: url(../images/ALD.png); */
 }
 
 .blog-section {
@@ -122,18 +150,48 @@ a {
 
 .project-link {
   text-align: center;
+  color: black;
+}
+
+.project-three__image,
+.project-one__image,
+.project-two__image,
+.project-five__image {
+  height: 40%;
+  width: 40%;
+  display: flex;
 }
 
 .socials-links,
 .blog-links {
   text-align: center;
   font-size: 18px;
+  color: black;
+}
+
+.social-image__one {
+  height: 50%;
+  width: 50%;
+}
+
+.social-image__two {
+  height: 90%;
+  width: 90%;
+}
+
+.social-image__three {
+  /* height: 15%; */
+  width: 60%;
 }
 
 .link-one,
 .link-two,
 .link-three {
   text-decoration: none;
+}
+
+.socials-links__title {
+  color: black;
 }
 
 .main-container {
