--- a/src/styling/posts.css
+++ b/src/styling/posts.css
@@ -2,3 +2,17 @@
   border-bottom: 2px solid white;
   text-align: center;
 }
+
+.post-content {
+  font-size: 18px;
+  text-align: center;
+}
+
+.post-title {
+  color: black;
+  /* text-transform: uppercase; */
+}
+
+.post-detail {
+  /* text-decoration: dashed; */
+}
