--- a/src/styling/blog.css
+++ b/src/styling/blog.css
@@ -44,11 +44,13 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  padding-top: 50px;
+  /* background-color: aqua; */
 }
 
 .image-one {
-  height: 10%;
-  width: 10%;
+  height: 45%;
+  width: 45%;
 }
 
 .header-photo {
