--- a/src/styling/blog.css
+++ b/src/styling/blog.css
@@ -99,7 +99,13 @@ body {
 .socials-header {
   color: black;
   font-size: 1.5em;
-  text-decoration: underline;
+  text-transform: uppercase;
+  letter-spacing: 1em;
+}
+
+.fab,
+.fas {
+  margin-right: 20px;
 }
 
 .socials-header {
